--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.breadcrumb {
+    list-style: none;
+    margin: 0 0 1.5rem 0;
+    //font-family: "Roboto";
+    font-size: 24px;
+    font-weight: 300;
+  }
+  
+  .breadcrumb li {
+    display: inline-block;
+    color: royalblue
+  }
+  
+  .breadcrumb li:not(:last-child):after {
+    content: '>';
+    margin: 0 .2em;
+    display: inline-block;
+    color: royalblue;
+    font-weight: 500;
+  }
+  
+  .breadcrumb li a {
+    display: inline-block;
+    color: inherit;
+    text-decoration: none;
+    font-weight: 600;
+  }
